--- a/index.css
+++ b/index.css
@@ -1,50 +1,39 @@
 body {
-    background-image: url("yarn.jpeg");
+    background-image: url("snow.jpg");
     background-size: cover;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:  Oxygen, BlinkMacSystemFont, Roboto, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
     text-align: center;
     height: 100vh;
 }
 
-.container {
-    background: white;
-    max-width: 80%;
-    margin: auto;
-    border: 3px solid black;
-    border-radius: 10px;
-}
-
 h1 {
-    margin-top: 10px;
+    margin-top: 50px;
     margin-bottom: 10px;
 }
 
 h2 {
     font-size: 50px;
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 button {
-    border: 1px solid black;
+    border: none;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: white;
+    color: black;
     font-weight: bold;
-    width: 200px;
-    margin-bottom: 5px;
-    border-radius: 5px;
+    width: 150px;
+    margin-bottom: 15px;
+    border-radius: 95px;
 }
 
 #increment-btn {
-    background: #2C2891;
+    background: aliceblue;
 }
 
 #save-btn {
-    background: #1C7947;
-}
-
-#save-el {
-    font-weight: bold;
+    background: burlywood;
 }
 
